  where there are no parents.

* Added a new attribute called ``users`` to the Department class which is a
  synonym for the ``members`` attribute.

* Task class is now preventing one of the dependents to be set as the parent of
  a task.

* Task class is now preventing one of the parents to be set as the one of the
  dependents of a task.

0.2.0.a7
--------

* Changed these default setting value names to corresponding new names:
  * ``DEFAULT_TASK_DURATION`` -> ``TASK_DURATION``
  * ``DEFAULT_TASK_PRIORITY`` -> ``TASK_PRIORITY``
  * ``DEFAULT_VERSION_TAKE_NAME`` -> ``VERSION_TAKE_NAME``
  * ``DEFAULT_TICKET_LABEL`` -> ``TICKET_LABEL``
  * ``DEFAULT_ACTIONS`` -> ``ACTIONS``
  * ``DEFAULT_BG_COLOR`` -> ``BG_COLOR``
  * ``DEFAULT_FG_COLOR`` -> ``FG_COLOR``

* stalker.conf.defaults:
  * Added default settings for project working hours (``WORKING_HOURS``,
    ``DAY_ORDER``, ``DAILY_WORKING_HOURS``)
  * Added a new variable for setting the task time resolution called
    ``TIME_RESOLUTION``.

* stalker.models.project.Project:
  * Removed Project.project_tasks attribute, use Project.tasks directly to get
    all the Tasks in that project. For root task you can do a quick query::
      
      Task.query.filter(Task.project==proj_id).filter(Task.parent==None).all()
    
    This will also return the Assets, Sequences and Shots in that project,
    which are also Tasks.
  
  * Users are now assigned to Projects by appending them to the Project.users
    list. This is done in this way to allow a reduced list of resources to be
    shown in the Task creation dialogs.
  
  * Added a new helper class for Project working hour management, called
    WorkingHours.
  
  * Added a new attribute to Project class called ``working_hours`` which holds
    stalker.models.project.WorkingHours instances to manage the Project working
    hours. It will directly be passed to TaskJuggler.

* stalker.models.task.Task:
  * Removed the Task.task_of attribute, use Task.parent to get the owner of