@@ -1,3 +1,5 @@
+<div style="text-align: center"><h4><b>Asset Summary</b></h4></div>
+
 <div id='asset_details_content_pane'>
 
 {# Avatar #}
