@@ -22,6 +22,11 @@ Stalker Changes
 * Task class is now preventing one of the parents to be set as the one of the
   dependents of a task.
 
+* Fixed `admin` users department initialization.
+
+* Added ``thumbnail`` attribute to the SimpleEntity class which is a reference
+  to a Link instance, showing the path of the thumbnail.
+
 0.2.0.a7
 --------
 
